# backupd

./: .gitignore  Cargo.toml  README.md
config/: backupd.env.example
packaging/systemd/: backupd.service
scripts/: install.sh  uninstall.sh  update-binary.sh
src/: cli.rs  config.rs  main.rs  scheduler.rs  types.rs
src/backup/: encrypt_stream.rs  mod.rs  mongodump.rs  retention.rs  upload.rs
src/notify/: discord.rs  mod.rs
src/restore/: decrypt_stream.rs  download.rs  mod.rs
